<resources>
    <string name="app_name">KTÜ GisLab</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_bina">Bina</string>
    <string name="title_activity_bina_1">Bina_1</string>
    <string name="Fragment1">This is Fragment 1</string>
    <string name="Fragment2">This is Fragment 2</string>
    <string name="Fragment3">This is Fragment 3</string>
    <string name="title_activity_ana">AnaActivity</string>
    <string name="btn_bina">Bina</string>
    <string name="btn_isyeri">Is Yeri</string>
    <string name="btn_yol">Yol</string>
    <string name="geocode">GEOCODE</string>
    <string name="mahalle_adi">MAHALLE ADI</string>
    <string name="title_activity_bina_veri_tabani">BinaVeriTabaniActivity</string>
    <string name="kapi_no">Kapı No</string>
    <string name="site_adi">Site Adı</string>
    <string name="apartman_blok_adi">Apartman / Blok Adı</string>
    <string name="bina_halihazir_durumu">Bina Halihazır Durumu</string>
    <string name="dis_cephe_durumu">Dış Cephe Durumu</string>
    <string name="yapi_durumu">Yapı Durumu</string>
    <string name="cati_durumu">Çatı Durumu</string>
    <string name="yapi_sistemi">Yapı Sistemleri</string>
    <string name="kullanilan_malzeme">Kullanılan Malzeme</string>
    <string name="ortak_kullanim1">Kömürlük</string>
    <string name="ortak_kullanim2">Sığınak</string>
    <string name="ortak_kullanim3">Otopark</string>
    <string name="ortak_kullanim4">Yangın Merdiveni</string>
    <string name="ortak_kullanim5">Asansör</string>
    <string name="diger_bilgiler1">Güneş Paneli</string>
    <string name="diger_bilgiler2">Isı Yalıtımı</string>
    <string name="notlar">Notlar</string>
    <string name="bina_foto_no">Bina Fotoğraf No</string>
    <string name="isyeri_foto_no">İşyeri Fotoğtaf No</string>
    <string name="yol_foto_no">Yol Fotoğraf No</string>
    <string name="kat_sayisi">Kat Sayısı</string>
    <string name="daire">Daire</string>
    <string name="isyeri">İş Yeri</string>
    <string name="bodrum">Bodrum</string>
    <string name="zemin">Zemin</string>
    <string name="normal">Normal</string>
    <string name="cekme_cati">Çekme(Çatı)</string>
    <string name="bina_sorumlusu">Bina Sorumlusu</string>
    <string name="bina_sorumlusu_adsoyad">Adı - Soyadı</string>
    <string name="bina_sorumlusu_telefon">Telefonu</string>
    <string name="bina_kullanim_amaci">Bina Kullanım Amacı</string>
    <string name="konut">Konut</string>
    <string name="kamu">Kamu</string>
    <string name="sanayi">Sanayi</string>
    <string name="ticari">Ticari</string>
    <string name="tuzel">Tüzel</string>
    <string name="gelismislik_durumu">Gelişmişlik Durumu</string>
    <string name="gelismis">Gelişmiş</string>
    <string name="orta_gelismis">Orta Gelişmiş</string>
    <string name="gelismemis">Gelişmemiş</string>
    <string name="ickapi_no">İç Kapı No</string>
    <string name="numarali_yerin_niteligi">Numaralı Yerin Niteliği</string>
    <string name="nitelik_kodu">Nitelik Kodu</string>
    <string name="ozel_isyeri">Özel ,İşyeri</string>
    <string name="kamu_isyeri">Kamu İşyeri</string>
    <string name="insaat">İnşaat</string>
    <string name="arsa">Arsa</string>
    <string name="diğer">Diğer</string>
    <string name="baska_bina_bulvar_meydan">Binanın Başka Meydan, Bulvar, Cadde veya Sokağa Açılan Kapısı Var İse</string>
    <string name="meydan_bulvar_cadde_adi_yaz">Meydan, Bulvar, Cadde veya Sokağın Adını Yazınız</string>
    <string name="dusunceler">Düşünceler</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bina_tercih">Bina_tercih</string>
    <string name="title_activity_bina__kayitlar">Bina_Kayitlar</string>
    <string name="title_activity_bina__resim_galerisi">Bina_ResimGalerisi</string>
    <string name="title_activity_isyeri">Isyeri</string>
    <string name="title_activity_isyeri_tercih">Isyeri_tercih</string>
    <string name="title_activity_isyeri__kayitlar">Isyeri_Kayitlar</string>
    <string name="title_activity_isyeri__resim_galerisi">Isyeri_ResimGalerisi</string>
    <string name="title_activity_yol">Yol</string>
    <string name="title_activity_yol__kayitlar">Yol_Kayitlar</string>
    <string name="title_activity_yol_tercih">Yol_tercih</string>
</resources>
