<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feyzullah.trabzonbelediyesi.trabzonbelediyesi_binayeriyol.Bina_7">
    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Ortak Kullanım"
            android:textColor="#FA5"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/textView14"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortak_kullanim1"
                android:id="@+id/ortakkullanim1"
                android:layout_gravity="left" />

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortak_kullanim2"
                android:id="@+id/ortakkullanim2"
                android:layout_gravity="left" />

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortak_kullanim3"
                android:id="@+id/ortakkullanim3"
                android:layout_gravity="left" />

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortak_kullanim4"
                android:id="@+id/ortakkullanim4"
                android:layout_gravity="left" />

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ortak_kullanim5"
                android:id="@+id/ortakkullanim5"
                android:layout_gravity="left" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Diğer Bilgiler"
            android:textColor="#FA5"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/textview20"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diger_bilgiler1"
                android:id="@+id/digerbilgiler1"
                android:layout_gravity="left" />

            <com.rey.material.widget.CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/diger_bilgiler2"
                android:id="@+id/digerbilgiler2"
                android:layout_gravity="left" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
</FrameLayout>
