<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.feyzullah.trabzonbelediyesi.trabzonbelediyesi_binayeriyol.Bina_8">

    <ScrollView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bina_sorumlusu"
            android:textColor="#FA5"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/textView16"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bina_sorumlusu_adsoyad"
            android:textColor="#FA5"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/textView17"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/binasorumlusu"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/bina_sorumlusu_telefon"
            android:textColor="#FA5"
            android:textSize="25dp"
            android:textStyle="bold"
            android:id="@+id/textView18"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/sorumlu_tel"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</ScrollView>
</FrameLayout>
